--- a/WebNosology/WebNosology.UI.WebApp/Web.config
+++ b/WebNosology/WebNosology.UI.WebApp/Web.config
@@ -1,9 +1,5 @@
 ﻿<?xml version="1.0"?>
-
 <configuration>
-
-
-  
 	<configSections>
 		<sectionGroup name="system.web.extensions" type="System.Web.Configuration.SystemWebExtensionsSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
 			<sectionGroup name="scripting" type="System.Web.Configuration.ScriptingSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
@@ -19,38 +15,35 @@
 	</configSections>
 	<appSettings/>
 	<connectionStrings/>
-
-  <location path="plugins">
-    <system.web>
-      <authorization>
-        <allow users="*"/>
-      </authorization>
-    </system.web>
-  </location>
-  <location path="styles">
-    <system.web>
-      <authorization>
-        <allow users="*"/>
-      </authorization>
-    </system.web>
-  </location>
-  <location path="scripts">
-    <system.web>
-      <authorization>
-        <allow users="*"/>
-      </authorization>
-    </system.web>
-  </location>
-  
+	<location path="plugins">
+		<system.web>
+			<authorization>
+				<allow users="*"/>
+			</authorization>
+		</system.web>
+	</location>
+	<location path="styles">
+		<system.web>
+			<authorization>
+				<allow users="*"/>
+			</authorization>
+		</system.web>
+	</location>
+	<location path="scripts">
+		<system.web>
+			<authorization>
+				<allow users="*"/>
+			</authorization>
+		</system.web>
+	</location>
 	<system.web>
-    
 		<!-- 
             Значение параметра compilation debug="true" означает, что в компилированную страницу будут вставлены 
             отладочные символы. Так как этот 
             параметр влияет на производительность, следует задавать для него значение True 
             только на этапе разработки.
         -->
-		<compilation debug="false">
+		<compilation debug="true">
 			<assemblies>
 				<add assembly="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
 				<add assembly="System.Data.DataSetExtensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
@@ -63,9 +56,8 @@
             режима проверки подлинности, используемого ASP.NET для проверки 
             подлинности пользователя, запрашивающего разрешение на доступ. 
         -->
-    
 		<authentication mode="Forms">
-			<forms loginUrl="/pages/login.aspx" name=".ASPXFORMSAUTH" defaultUrl="/pages/main.aspx">
+			<forms loginUrl="pages/login.aspx" name=".ASPXFORMSAUTH" defaultUrl="pages/main.aspx">
 			</forms>
 		</authentication>
 		<authorization>
@@ -83,7 +75,7 @@
             <error statusCode="404" redirect="FileNotFound.htm" />
         </customErrors>
         -->
-		<customErrors mode="RemoteOnly" defaultRedirect="/pages/error.aspx" />
+		<customErrors mode="RemoteOnly" defaultRedirect="pages/error.aspx"/>
 		<pages>
 			<controls>
 				<add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
