Added : Master page for main page

--- a/WebNosology/WebNosology.UI.WebApp/Web.config
+++ b/WebNosology/WebNosology.UI.WebApp/Web.config
@@ -57,7 +57,7 @@
             подлинности пользователя, запрашивающего разрешение на доступ. 
         -->
 		<authentication mode="Forms">
-			<forms loginUrl="pages/login.aspx" name=".ASPXFORMSAUTH" defaultUrl="pages/main.aspx">
+			<forms loginUrl="pages/login.aspx" name=".ASPXFORMSAUTH" defaultUrl="pages/main/home.aspx">
 			</forms>
 		</authentication>
 		<authorization>
