Added : Master page for login and errror pages Fixed : urls

--- a/WebNosology/WebNosology.UI.WebApp/Web.config
+++ b/WebNosology/WebNosology.UI.WebApp/Web.config
@@ -57,7 +57,7 @@
             подлинности пользователя, запрашивающего разрешение на доступ. 
         -->
 		<authentication mode="Forms">
-			<forms loginUrl="pages/login.aspx" name=".ASPXFORMSAUTH" defaultUrl="pages/main/home.aspx">
+			<forms loginUrl="~/pages/account/login.aspx" name=".ASPXFORMSAUTH" defaultUrl="~/pages/main/home.aspx">
 			</forms>
 		</authentication>
 		<authorization>
@@ -75,7 +75,7 @@
             <error statusCode="404" redirect="FileNotFound.htm" />
         </customErrors>
         -->
-		<customErrors mode="RemoteOnly" defaultRedirect="pages/error.aspx"/>
+		<customErrors mode="RemoteOnly" defaultRedirect="~/pages/error.aspx"/>
 		<pages>
 			<controls>
 				<add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
