--- a/WebNosology/WebNosology.UI.WebApp/WebNosology.UI.WebApp.csproj
+++ b/WebNosology/WebNosology.UI.WebApp/WebNosology.UI.WebApp.csproj
@@ -1,4 +1,6 @@
-﻿<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -10,7 +12,18 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WebNosology.UI.WebApp</RootNamespace>
     <AssemblyName>WebNosology.UI.WebApp</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <FileUpgradeFlags>
+    </FileUpgradeFlags>
+    <UpgradeBackupLocation>
+    </UpgradeBackupLocation>
+    <OldToolsVersion>3.5</OldToolsVersion>
+    <UseIISExpress>false</UseIISExpress>
+    <IISExpressSSLPort />
+    <IISExpressAnonymousAuthentication />
+    <IISExpressWindowsAuthentication />
+    <IISExpressUseClassicPipelineMode />
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -32,18 +45,11 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Core">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Data.DataSetExtensions">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Web.Extensions">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Xml.Linq">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Web.ApplicationServices" />
+    <Reference Include="System.Web.DynamicData" />
+    <Reference Include="System.Web.Entity" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
@@ -51,8 +57,15 @@
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
     <Reference Include="System.Web.Mobile" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\font-awesome\font-awesome.css" />
+    <Content Include="Content\font-awesome\font-awesome.min.css" />
+    <Content Include="Content\mdl-v1.0.5\material.css" />
+    <Content Include="Content\mdl-v1.0.5\material.js" />
+    <Content Include="Content\mdl-v1.0.5\material.min.css" />
+    <Content Include="Content\mdl-v1.0.5\material.min.js" />
     <Content Include="Default.aspx" />
   </ItemGroup>
   <ItemGroup>
@@ -116,15 +129,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="files\dist\dotnetfx.exe" />
-    <Content Include="plugins\font-awesome\css\font-awesome.css" />
-    <Content Include="plugins\font-awesome\css\font-awesome.min.css" />
-    <Content Include="plugins\font-awesome\fonts\fontawesome-webfont.svg" />
-    <Content Include="plugins\jDialog\jDialog.css" />
-    <Content Include="plugins\jDialog\jDialog.js" />
-    <Content Include="plugins\mdl\material.css" />
-    <Content Include="plugins\mdl\material.js" />
-    <Content Include="plugins\mdl\material.min.css" />
-    <Content Include="plugins\mdl\material.min.js" />
+    <Content Include="Content\font-awesome\fonts\fontawesome-webfont.svg" />
+    <Content Include="Content\jDialog\jDialog.css" />
+    <Content Include="Content\jDialog\jDialog.js" />
     <Content Include="scripts\jQuery\jquery-1.11.3.js" />
     <Content Include="scripts\jQuery\jquery-1.6.2.js" />
     <Content Include="scripts\jQuery\jquery-1.6.2.min.js" />
@@ -137,6 +144,11 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\mdl-v1.0.5\package.json" />
+    <Content Include="Content\mdl-v1.0.5\material.min.js.map" />
+    <Content Include="Content\mdl-v1.0.5\material.min.css.map" />
+    <Content Include="Content\mdl-v1.0.5\LICENSE" />
+    <Content Include="Content\mdl-v1.0.5\bower.json" />
     <None Include="files\dist\Высокозатратные нозологии%28Руководство%29Вер.2_1.doc" />
     <None Include="files\dist\Высокозатратные нозологии.msi" />
     <None Include="files\docs\rp_№2782-r_30_12_2014.pdf" />
@@ -150,23 +162,29 @@
     <Content Include="pages\shared\main.Master" />
     <Content Include="readme.txt" />
     <Content Include="pages\shared\default.Master" />
-    <None Include="plugins\font-awesome\fonts\fontawesome-webfont.eot" />
-    <None Include="plugins\font-awesome\fonts\fontawesome-webfont.ttf" />
-    <None Include="plugins\font-awesome\fonts\fontawesome-webfont.woff" />
-    <None Include="plugins\font-awesome\fonts\fontawesome-webfont.woff2" />
-    <None Include="plugins\font-awesome\fonts\FontAwesome.otf" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\WebNosology.Presentation\WebNosology.Presentation.csproj">
-      <Project>{A9462EBB-2439-4B8B-96AE-CD456549A197}</Project>
-      <Name>WebNosology.Presentation</Name>
-    </ProjectReference>
+    <Content Include="packages.config" />
+    <Content Include="Content\font-awesome\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Content\font-awesome\fonts\fontawesome-webfont.woff" />
+    <Content Include="Content\font-awesome\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Content\font-awesome\fonts\fontawesome-webfont.eot" />
+    <Content Include="Content\font-awesome\fonts\FontAwesome.otf" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WebNosology.Presentation\WebNosology.Presentation.csproj">
+      <Project>{a9462ebb-2439-4b8b-96ae-cd456549a197}</Project>
+      <Name>WebNosology.Presentation</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <PropertyGroup>
+    <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
+    <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+  </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v9.0\WebApplications\Microsoft.WebApplication.targets" />
+  <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
+  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
