--- a/WebNosology/WebNosology.UI.WebApp/WebNosology.UI.WebApp.csproj
+++ b/WebNosology/WebNosology.UI.WebApp/WebNosology.UI.WebApp.csproj
@@ -12,7 +12,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WebNosology.UI.WebApp</RootNamespace>
     <AssemblyName>WebNosology.UI.WebApp</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <UpgradeBackupLocation>
@@ -46,12 +46,11 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
-    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
@@ -62,6 +61,8 @@
   <ItemGroup>
     <Content Include="Content\font-awesome\font-awesome.css" />
     <Content Include="Content\font-awesome\font-awesome.min.css" />
+    <Content Include="Content\jDialog\jDialog.min.css" />
+    <Content Include="Content\jDialog\jDialog.min.js" />
     <Content Include="Content\mdl-v1.0.5\material.css" />
     <Content Include="Content\mdl-v1.0.5\material.js" />
     <Content Include="Content\mdl-v1.0.5\material.min.css" />
@@ -139,8 +140,8 @@
     <Content Include="scripts\jQuery\jquery-2.1.4.min.js" />
     <Content Include="scripts\modal.js" />
     <Content Include="scripts\progress.js" />
-    <Content Include="styles\login.css" />
     <Content Include="styles\main.css" />
+    <Content Include="styles\main.min.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -166,8 +167,8 @@
     <Content Include="Content\font-awesome\fonts\fontawesome-webfont.woff2" />
     <Content Include="Content\font-awesome\fonts\fontawesome-webfont.woff" />
     <Content Include="Content\font-awesome\fonts\fontawesome-webfont.ttf" />
-    <Content Include="Content\font-awesome\fonts\fontawesome-webfont.eot" />
     <Content Include="Content\font-awesome\fonts\FontAwesome.otf" />
+    <None Include="Properties\PublishProfiles\dev nosology.pubxml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
