--- a/Nosology.MVP/Nosology.MVP.DataAccessLayer/Nosology.MVP.DataAccessLayer.csproj
+++ b/Nosology.MVP/Nosology.MVP.DataAccessLayer/Nosology.MVP.DataAccessLayer.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D19FAC5F-0433-4BCE-A44F-C2B5FF583E65}</ProjectGuid>
+    <ProjectGuid>{0879C5EE-2B99-49ED-9590-7D053117616C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Escyug.Nosology.MVP.Engine</RootNamespace>
-    <AssemblyName>Nosology.MVP.Engine</AssemblyName>
+    <RootNamespace>Escyug.Nosology.MVP.DataAccessLayer</RootNamespace>
+    <AssemblyName>Nosology.MVP.DataAccessLayer</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -39,18 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Loggers\StupidLogger.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="Common\ConnectionFactory.cs" />
+    <Compile Include="Common\DataFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\UserRepository.cs" />
-    <Compile Include="User.cs" />
+    <Compile Include="Sql\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Nosology.MVP.DataAccessLayer\Nosology.MVP.DataAccessLayer.csproj">
-      <Project>{0879c5ee-2b99-49ed-9590-7d053117616c}</Project>
-      <Name>Nosology.MVP.DataAccessLayer</Name>
-    </ProjectReference>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
