--- a/Nosology.MVP/Nosology.MVP.UI.Console/Nosology.MVP.UI.ConsoleApp.csproj
+++ b/Nosology.MVP/Nosology.MVP.UI.Console/Nosology.MVP.UI.ConsoleApp.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{262768B8-0A80-48CD-819A-74D8910260E3}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Escyug.Nosology.MVP.UI.Console</RootNamespace>
-    <AssemblyName>Nosology.MVP.UI.Console</AssemblyName>
+    <RootNamespace>Escyug.Nosology.MVP.UI.ConsoleApp</RootNamespace>
+    <AssemblyName>Nosology.MVP.UI.ConsoleApp</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -46,6 +46,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Nosology.MVP.Engine\Nosology.MVP.Engine.csproj">
+      <Project>{d19fac5f-0433-4bce-a44f-c2b5ff583e65}</Project>
+      <Name>Nosology.MVP.Engine</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
