--- a/Nosology.MVP/Nosology.MVP.Presentation/Nosology.MVP.Presentation.csproj
+++ b/Nosology.MVP/Nosology.MVP.Presentation/Nosology.MVP.Presentation.csproj
@@ -39,9 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Presenters\DocumentsPresenter.cs" />
+    <Compile Include="Presenters\DownloadsPresenter.cs" />
     <Compile Include="Presenters\LoginPresenter.cs" />
     <Compile Include="Presenters\MainPresenter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\IDocumentsView.cs" />
+    <Compile Include="Views\IDownloadsView.cs" />
     <Compile Include="Views\ILoginView.cs" />
     <Compile Include="Views\IMainView.cs" />
   </ItemGroup>
