Added : common login template

--- a/Nosology.MVP/Nosology.MVP.UI.WebApp/Nosology.MVP.UI.WebApp.csproj
+++ b/Nosology.MVP/Nosology.MVP.UI.WebApp/Nosology.MVP.UI.WebApp.csproj
@@ -94,11 +94,13 @@
       <HintPath>..\packages\Microsoft.AspNet.FriendlyUrls.Core.1.0.2\lib\net45\Microsoft.AspNet.FriendlyUrls.dll</HintPath>
     </Reference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="App_Data\docs\" />
+    <Folder Include="App_Data\files\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\documents.xml" />
     <Content Include="App_Data\files.xml" />
-    <Content Include="App_Data\files\dotnetfx.exe" />
     <Content Include="App_Data\main.txt" />
     <Content Include="App_Data\users.xml" />
     <Content Include="Content\bootstrap.css" />
@@ -131,6 +133,7 @@
     <Content Include="Content\mdl-v1.0.5\bower.json" />
     <Content Include="pages\documents.aspx" />
     <Content Include="pages\downloads.aspx" />
+    <Content Include="pages\error.aspx" />
     <Content Include="pages\main.aspx" />
     <Content Include="pages\shared\_Default.Master" />
     <Content Include="pages\shared\_Main.Master" />
@@ -140,11 +143,6 @@
     <Content Include="fonts\material-design-icons\fonts\materialdesignicons-webfont.ttf" />
     <Content Include="fonts\material-design-icons\fonts\materialdesignicons-webfont.woff" />
     <Content Include="fonts\material-design-icons\fonts\materialdesignicons-webfont.woff2" />
-    <Content Include="App_Data\docs\rp_№2782-r_30_12_2014.pdf" />
-    <Content Include="App_Data\docs\О внесении изменений в приказ Минздравсоцразвития №162н.pdf" />
-    <Content Include="App_Data\docs\Постановление №404 от 2012.pdf" />
-    <Content Include="App_Data\files\Высокозатратные нозологии%28Руководство%29Вер.2_1.doc" />
-    <Content Include="App_Data\files\Высокозатратные нозологии.msi" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="pages\templates\CS.aspx" />
     <Content Include="pages\templates\modalTemplate.aspx" />
@@ -216,6 +214,13 @@
     </Compile>
     <Compile Include="pages\downloads.aspx.designer.cs">
       <DependentUpon>downloads.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="pages\error.aspx.cs">
+      <DependentUpon>error.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="pages\error.aspx.designer.cs">
+      <DependentUpon>error.aspx</DependentUpon>
     </Compile>
     <Compile Include="pages\main.aspx.cs">
       <DependentUpon>main.aspx</DependentUpon>
