--- a/Nosology.MVP/Nosology.MVP.UI.WebApp/Web.config
+++ b/Nosology.MVP/Nosology.MVP.UI.WebApp/Web.config
@@ -6,6 +6,31 @@
 <configuration>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
+    <!--
+            Раздел <authentication> позволяет настроить параметры 
+            режима проверки подлинности, используемого ASP.NET для проверки 
+            подлинности пользователя, запрашивающего разрешение на доступ. 
+        -->
+    <authentication mode="Forms">
+      <forms loginUrl="~/Default.aspx" name=".ASPXFORMSAUTH" defaultUrl="~/pages/main.aspx"/>
+    </authentication>
+    <authorization>
+      <deny users="?"/>
+    </authorization>
+    <!--
+            Раздел <customErrors> позволяет настраивать 
+            параметры действий на случай возникновения необработанных ошибок 
+            во время выполнения запроса. А именно, 
+            он позволяет разработчикам настраивать HTML-страницы 
+            с сообщениями об ошибках, которые будут отображаться вместо трассировки стека ошибок.
+
+    <customErrors mode="RemoteOnly" defaultRedirect="GenericErrorPage.htm">
+        <error statusCode="403" redirect="NoAccess.htm" />
+        <error statusCode="404" redirect="FileNotFound.htm" />
+    </customErrors>
+    -->
+    <customErrors mode="RemoteOnly" defaultRedirect="~/pages/error.aspx"/>
+    
     <httpRuntime targetFramework="4.5" />
     <pages>
       <namespaces>
