--- a/Nosology.MVP/Nosology.MVP.UI.WebApp/Web.config
+++ b/Nosology.MVP/Nosology.MVP.UI.WebApp/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="false" targetFramework="4.5" />
     <!--
             Раздел <authentication> позволяет настроить параметры 
             режима проверки подлинности, используемого ASP.NET для проверки 
