Added : redirecting to login page after session closed

--- a/Nosology.MVP/Nosology.MVP.Engine/Nosology.MVP.Engine.csproj
+++ b/Nosology.MVP/Nosology.MVP.Engine/Nosology.MVP.Engine.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContentService.cs" />
     <Compile Include="Loggers\StupidLogger.cs">
       <SubType>Code</SubType>
     </Compile>
