--- a/Nosology.MVP/Nosology.MVP.Presentation/Nosology.MVP.Presentation.csproj
+++ b/Nosology.MVP/Nosology.MVP.Presentation/Nosology.MVP.Presentation.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Escyug.Nosology.MVP.Presentation</RootNamespace>
     <AssemblyName>Nosology.MVP.Presentation</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
