--- a/Nosology.MVP/Nosology.MVP.UI.WebApp/Web.config
+++ b/Nosology.MVP/Nosology.MVP.UI.WebApp/Web.config
@@ -51,7 +51,7 @@
         <error statusCode="404" redirect="FileNotFound.htm" />
     </customErrors>
     -->
-    <customErrors mode="RemoteOnly" defaultRedirect="~/pages/error.aspx"/>
+    <customErrors mode="RemoteOnly" defaultRedirect="~/pages/errors/error.aspx"/>
     <httpRuntime/>
     <pages controlRenderingCompatibilityVersion="4.0">
       <namespaces>
