--- a/Nosology.MVP/Nosology.MVP.UI.WebApp.Degrade/Nosology.MVP.UI.WebApp.Degrade.csproj
+++ b/Nosology.MVP/Nosology.MVP.UI.WebApp.Degrade/Nosology.MVP.UI.WebApp.Degrade.csproj
@@ -95,6 +95,13 @@
     <Compile Include="pages\errors\error.aspx.designer.cs">
       <DependentUpon>error.aspx</DependentUpon>
     </Compile>
+    <Compile Include="pages\errors\FileNotFound.aspx.cs">
+      <DependentUpon>FileNotFound.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="pages\errors\FileNotFound.aspx.designer.cs">
+      <DependentUpon>FileNotFound.aspx</DependentUpon>
+    </Compile>
     <Compile Include="pages\main.aspx.cs">
       <DependentUpon>main.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -146,6 +153,7 @@
     <Content Include="pages\documents.aspx" />
     <Content Include="pages\downloads.aspx" />
     <Content Include="pages\errors\error.aspx" />
+    <Content Include="pages\errors\FileNotFound.aspx" />
     <Content Include="pages\main.aspx" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <Content Include="Web.config" />
