--- a/Nosology.MVP/Nosology.MVP.UI.WebApp.Degrade/Web.config
+++ b/Nosology.MVP/Nosology.MVP.UI.WebApp.Degrade/Web.config
@@ -54,7 +54,9 @@
             <error statusCode="404" redirect="FileNotFound.htm" />
         </customErrors>
         -->
-    <customErrors mode="RemoteOnly" defaultRedirect="~/pages/errors/error.aspx"/>
+    <customErrors mode="RemoteOnly" defaultRedirect="~/pages/errors/common.aspx">
+      <error statusCode="404" redirect="~/pages/errors/FileNotFound.htm" />
+    </customErrors>
     <pages>
       <controls>
         <add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
